# shopkit

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .tool-versions  LICENSE  Makefile  PLATFORM-KIT.md  README.md  REFERENCE-NOTES.md  SECURITY-FINDINGS.md  SECURITY.md  STACK-CHOICES.md  TODO.md  catalog-info.yaml  docker-compose.yml
.claude/commands/: check-aspire.md  check-aws.md  check-azure.md  check-db.md  check-dependencies.md  check-frontend.md  check-gcp.md  check-python.md  check-secrets.md  check-standards.md  compliance-check.md  fix-frontend.md  fix-python.md  load-test.md  pen-test.md  review-conventions.md  security-review.md  security-scan.md  threat-model.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/compliance/: access-review.md  dr-review.md  pentest-review.md  risk-review.md  training-review.md  vendor-review.md
.github/workflows/: ci.yml  compliance-calendar.yml  compliance-evidence.yml  dr-restore-test.yml  drift-detection.yml  publish.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  audit.py  config.py  database.py  deps.py  main.py  models.py  schemas.py  security.py  seed.py  telemetry.py
backend/app/routers/: auth.py  cart.py  checkout.py  products.py  users.py
backend/tests/: conftest.py  test_audit.py  test_auth.py  test_catalog_cart.py  test_health.py
backend/tests/integration/: test_db_integration.py
docs/: DATABASE-MIGRATIONS.md  FEATURE-FLAGS.md
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: shop.spec.ts
frontend/src/: App.tsx  index.css  main.tsx  test-setup.ts
frontend/src/api/: client.test.ts  client.ts
governance/policy-as-code/: README.md
iac-terraform/gcp-cloud-run/: README.md  backend.tf.example  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
load-testing/k6/: load.js  smoke.js  spike.js
load-testing/locust/: locustfile.py
observability/: METRIC-NAME-DECISION.md  alertmanager.yml  docker-compose.observability.yml  prometheus.yml  recording_rules.yml
operations/: README.md  SLOs.md
operations/runbooks/: incident-response.md  postmortem-template.md  rollback.md
security/: manual-checks.sh  zap-scan.sh
tools/: _platform_kit.py  check_migrations.py  doctor.py  sync_check.py
(+21 files in other folders)
